# aimatrix-backend

./: README.md  app.py  contact.js  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  script.js
python-backend/: main.py  requirements.txt
vercel-backend/: vercel.json
vercel-backend/api/: contact.js  package.json
vercel-backend/api/ai/: predict.js
