[tool.poetry]
name = "aimatrix-backend"
version = "1.0.0"
description = "Advanced AI Automation Backend"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.1.1"
python-multipart = "0.0.6"
email-validator = "1.3.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
